--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
   "name": "mockdataapp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~53.0.22",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~16.1.11",
+    "expo-image": "^2.4.0",
+    "expo-notifications": "^0.31.4",
     "expo-status-bar": "~2.2.3",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^7.3.2",
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-web": "^0.20.0",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.1",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
